--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation('io.jsonwebtoken:jjwt:0.6.0')
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.4'
 	implementation 'org.postgresql:postgresql:42.1.1'
+	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
